crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_file_resource.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_file_resource/main.py
---
packages:
  - resource-pkg
count: 1
