crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_find_spec_probe.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_find_spec_probe/main.py
---
packages:
  - spec-pkg
count: 1
