crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_getmodule.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_getmodule/main.py
---
packages:
  - getmodule-pkg
count: 1
