crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_getsource.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_getsource/main.py
---
packages:
  - sourced-pkg
count: 1
