crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_getsource_keyword.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_getsource_keyword/main.py
---
packages:
  - keyword-sourced-pkg
count: 1
