crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_globals_binding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_globals_binding/main.py
---
packages:
  - globals-pkg
count: 1
