crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_importlib_static_external.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_importlib_static_external/main.py
---
packages:
  - native-plugin
count: 1
