crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_ismodule.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_ismodule/main.py
---
packages:
  - identity-pkg
count: 1
